src/test/resources/public/input/typechecking/fail/double_decl/fail02.jova
class Test{
  public int foo(){
    return 0;
  }
  
  public int foo(){
    return 0;
  }
}

class Main {

  public int main() {

    return 0;
  }

}